# zipline

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
examples/: ctty_decrypt.rs
src/: app.rs  backend.rs  browser.rs  cli.rs  lib.rs  main.rs  pty.rs  ui.rs  update.rs
tests/: decrypt_under_tty.rs  install_sh.rs  roundtrip.rs
